--- a/src/Templates/Header/header.css
+++ b/src/Templates/Header/header.css
@@ -12,12 +12,18 @@ body {
   width: 100%;
   height: 230px;
   position: relative;
-  background-image: url('../../Images/Header/header-bg-mobile.png');
+  background-image: 
+   linear-gradient(
+    to right,
+    rgba(0,0,0,.5),
+    rgba(0,0,0,.5)
+  ), 
+  url('../../images/header/header-bg-mobile.png');
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0 auto;
 }
-.header:after {
+/* .header:after {
   content: '';
   position: absolute;
   top: 0;
@@ -26,7 +32,7 @@ body {
   height: 230px;
   background: rgba(0,0,0,.5);
   z-index: 1;
-}
+} */
 .header-wrapper {
   width: 320px;
   margin: 0 auto;
@@ -40,7 +46,7 @@ body {
   margin-bottom: 40px;
 }
 .header-nav-logo {
-  z-index: 2;
+  /* z-index: 2; */
   display: flex;
   align-items: baseline;
 }
@@ -65,7 +71,7 @@ body {
   color: white;
   display: flex;
   text-transform: uppercase;
-  z-index: 2;
+  /* z-index: 2; */
 }
 .header-nav-list-item {
   font-family: 'Roboto', sans-serif;
@@ -88,7 +94,7 @@ body {
 .search {
   width: 280px;
   position: relative;
-  z-index: 2;
+  /* z-index: 2; */
 }
 .search-input {
   width: 280px;
@@ -115,7 +121,7 @@ body {
   width: 12px;
   height: 12px;
   background: transparent;
-  background-image: url('../../Images/Header/search.svg');
+  background-image: url('../../images/header/search.svg');
   position: absolute;
   right: 0;
   top: 5px;
@@ -147,7 +153,7 @@ body {
 
 @media screen  and (min-width: 768px) and (max-width: 1024px) {
   .header {
-  background-image: url('../../Images/Header/header-bg-tablet.png');
+  background-image: url('../../images/header/header-bg-tablet.png');
 
   }
   .header-nav-logo-title {
@@ -166,7 +172,7 @@ body {
 }
 @media screen  and (min-width: 1024px) {
   .header {
-  background-image: url('../../Images/Header/header-bg-desktop.png');
+  background-image: url('../../images/header/header-bg-desktop.png');
     
   }
   .header-wrapper{
