add genres and year

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,4 @@
 @import "./components/footer/footer.css";
 @import "./components/header/header.css";
 @import "./components/main-section/main-section.css";
+@import "./components/pagination/pagination.css";
