--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -3,7 +3,7 @@
         class="photo-gallery-photo">
 
     <p class="title">{{title}}</p>
-    <p class="title">{{genre}} ????????<span class='title-accent'> | </span>{{release_date}} {{vote_average}}
+    <p class="title">{{genre_ids}}<span class='title-accent'> | </span>{{release_date}} {{vote_average}}
     </p>
 
 </li>
