--- a/src/components/modal-window/modal-window.css
+++ b/src/components/modal-window/modal-window.css
@@ -2,18 +2,40 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: 1px solid, red;
 }
 body {
   min-height: 100vh;
 }
+
+/* .header {
+  position: relative;
+} */
+
 /* * ------------- modal-window ---------------- */
 .wrapper {
-  padding: 20px;
   font-family: Roboto;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
   color: #000000;
+
+  width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  /* position: fixed;
+  top: 250px;
+  left: 20px;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0;
+  pointer-events: none; */
 }
 
 .poster {
@@ -25,21 +47,42 @@ body {
   margin-bottom: 30px;
 }
 
+.modal-window {
+  text-align: left;
+}
+
 .film-title {
   font-size: 20px;
   line-height: 23px;
   margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
-.film-info:not(:last-child) {
-  margin-bottom: 10px;
+/* «Схлопываем» рамки соседних ячеек */
+table {
+  border-collapse: collapse;
+}
+
+table td {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 3px;
+  /* border: 1px solid #2a2a2a; */
+}
+
+#col1 {
+  width: 100px;
+}
+
+#col2 {
+  width: 180px;
 }
 
 .film-info-box {
   margin-bottom: 20px;
 }
 
-.vote > span:first-child {
+.vote-average {
   width: 36px;
   height: 16px;
   background: #ff6b08;
@@ -47,6 +90,18 @@ body {
   border-radius: 5px;
   outline: none;
   border: none;
+  padding: 1px 10px;
+}
+
+.vote,
+.pop,
+.orig,
+.genre {
+  color: #8c8c8c;
+}
+
+.original-title {
+  text-transform: uppercase;
 }
 
 .film-about {
@@ -62,22 +117,27 @@ body {
 
 .film-about-text {
   width: 279px;
-  height: 217px;
   line-height: 20px;
 }
 
 .user-action-buttons {
   display: flex;
+  justify-content: space-between;
 }
 
 .buttons {
-  margin-right: 15px;
   width: 136px;
   height: 44px;
   background: #ffff;
   border-radius: 5px;
   border: 1px solid black;
   text-transform: uppercase;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.action-watch {
+  margin-right: 15px;
 }
 
 .active {
@@ -89,8 +149,80 @@ body {
 
 /* * ------------------TABLET ver.------------------ */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+  .wrapper {
+    width: 618px;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+  }
+
+  .poster {
+    width: 294px;
+    height: 416px;
+    margin-right: 30px;
+  }
+
+  #col1 {
+    width: 120px;
+  }
+  #col2 {
+    width: 200px;
+  }
+
+  .film-title {
+    font-size: 30px;
+    line-height: 35px;
+  }
+
+  .film-about {
+    margin-bottom: 20px;
+  }
+
+  .film-about-text {
+    width: 294px;
+  }
 }
 
 /* * ------------------DESKTOP ver.------------------ */
 @media screen and (min-width: 1024px) {
+  .wrapper {
+    width: 882px;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+  }
+  .poster {
+    width: 426px;
+    height: 514px;
+    margin-right: 30px;
+    object-fit: cover;
+  }
+
+  #col1 {
+    width: 150px;
+  }
+  #col2 {
+    width: 230px;
+  }
+  .film-title {
+    font-size: 30px;
+    line-height: 35px;
+  }
+
+  .film-about {
+    margin-bottom: 20px;
+  }
+
+  .film-about-text {
+    width: 426px;
+  }
+
+  .user-action-buttons {
+    display: flex;
+    justify-content: flex-start;
+  }
 }
