--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -1,31 +1,43 @@
-{{#each this}}
-
 <section class="wrapper film-info">
-    <img class="poster film-pic" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/{{poster_path}}"
+
+    <img class="poster film-pic" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/{{backdrop_path}}" // ?
         alt="a poster to {{title}} film">
 
     <div class="modal-window">
+
         <h2 class="film-title">{{title}}</h2>
 
-        <div class="film-info-box">
-            <p class="film-info vote">Vote / Votes <span>{{vote_average}}</span><span> /
-                </span><span>{{vote_count}}</span></p>
-            <p class="film-info pop">Popularity <span>{{popularity}}</span></p>
-            <p class="film-info orig">Original Title <span>{{original_title}}</span></p>
-            <p class="film-info genre">Genre <span>{{genre_ids}}</span></p>
-        </div>
+        <table class="film-info-box">
+            <tr>
+                <td id="col1" class="film-info vote">Vote / Votes</td>
+                <td id="col2" class="film-info-data">
+                    <span class="film-info-data vote-average">{{vote_average}}</span> / {{vote_count}}
+                </td>
+            </tr>
+            <tr>
+                <td class="film-info pop">Popularity</td>
+                <td class="film-info-data">{{popularity}}</td>
+            </tr>
+            <tr>
+                <td class="film-info orig">Original Title</td>
+                <td class="film-info-data original-title">{{original_title}}</td>
+            </tr>
+            <tr>
+                <td class="film-info genre">Genre</td>
+                <td class="film-info-data">{{#each genres}}{{name}}, {{/each}}</td>
+            </tr>
+        </table>
 
         <div class="film-about">
-            <h3 class="film-about-title">ABOUT</h3>
+            <p class="film-about-title">ABOUT</p>
             <p class="film-about-text">{{overview}}</p>
         </div>
-    </div>
 
-    <div class="user-action-buttons">
-        <button class="buttons action-watch active" type="button">add to Watched</button>
-        <button class="buttons action-queue" type="button">add to queue</button>
+
+        <div class="user-action-buttons">
+            <button class="buttons action-watch active" type="button">add to Watched</button>
+            <button class="buttons action-queue" type="button">add to queue</button>
+        </div>
+
     </div>
 </section>
-
-
-{{/each }}
