--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -1,6 +1,6 @@
 <li class="photo-gallery-item">
     <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/{{poster_path}}" alt="{{title}}"
-        class="photo-gallery-photo">
+        class="photo-gallery-photo" data-id="{{id}}">
 
     <p class="title">{{title}}</p>
     <p class="title">{{genre}} ????????<span class='title-accent'> | </span>{{release_date}} {{vote_average}}
