--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,4 @@
 @import "./components/main-section/main-section.css";
 @import "./components/pagination/pagination.css";
 @import "./components/spinner/spinner.css";
+@import "./components/trailer/trailer.css";
