--- a/src/components/modal-window/modal-window.css
+++ b/src/components/modal-window/modal-window.css
@@ -1,74 +1,84 @@
+:root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 250ms;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid, red;
+  /* border: 1px solid, red; */
 }
 body {
   min-height: 100vh;
 }
 
-/* .header {
-  position: relative;
-} */
-
 /* * ------------- modal-window ---------------- */
-.modal-window {
+
+body.modal-open {
+  overflow: hidden;
+}
+
+.is-hidden {
+  display: none;
+  pointer-events: none;
+}
+
+.modal-overlay {
+  position: absolute;
+  top: 230px;
+  width: 100vw;
+  height: 150vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  /* background-color: red; */
+  transition: opacity var(--animation-duration) var(--timing-function);
+}
+
+.modal-content {
   font-family: Roboto;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
   color: #000000;
 
-  width: 320px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px;
+  padding-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center; */
-
-  display: none;
-  /* position: fixed;
-  top: 250px;
-  left: 20px;
-  width: 100vw;
-  height: 100vh;
-  pointer-events: none; */
-}
-
-.modal-window.is-open {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   pointer-events: initial;
+
+  position: absolute;
+  top: 230px;
+  left: calc((94% - 287px) / 2);
+  width: min-content;
+  background-color: white;
+  /* background-color: rgba(0, 255, 255, 0.9); */
+  z-index: 1;
+  transition: opacity var(--animation-duration) var(--timing-function);
 }
 
-/* .modal-window-overlay {
+.modal-button {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-}
+  top: 220px;
+  left: calc(((94% - 287px) / 2) + 277px);
 
-.lightbox__button {
-  position: absolute;
-  top: 8px;
-  right: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 48px;
-  height: 48px;
+
+  width: 40px;
+  height: 40px;
   padding: 0;
   margin: 0;
   border: none;
   border-radius: 50%;
+
   background-color: transparent;
   color: #fff;
+
   cursor: pointer;
   transition: background-color var(--animation-duration) var(--timing-function);
   outline: none;
@@ -76,12 +86,20 @@ body {
   background-position: center;
   background-size: 60%;
   background-repeat: no-repeat;
+
+  z-index: 2;
 }
 
-.lightbox__button:hover,
-.lightbox__button:focus {
-  background-color: rgba(0, 0, 0, 0.5);
+/* .modal-button > svg {
+  fill: #ff6b08;
 } */
+
+.modal-button:hover,
+.modal-button:focus {
+  background-color: rgba(255, 255, 255, 0.95);
+  /* stroke: #ff6b08;
+  fill: #ff6b08; */
+}
 
 .poster {
   width: 280px;
@@ -103,16 +121,15 @@ body {
   text-transform: uppercase;
 }
 
-/* «Схлопываем» рамки соседних ячеек */
 table {
   border-collapse: collapse;
+  margin-bottom: 20px;
 }
 
 table td {
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 3px;
-  /* border: 1px solid #2a2a2a; */
 }
 
 #col1 {
@@ -121,10 +138,6 @@ table td {
 
 #col2 {
   width: 180px;
-}
-
-.film-info-box {
-  margin-bottom: 20px;
 }
 
 .vote-average {
@@ -167,7 +180,8 @@ table td {
 
 .user-action-buttons {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  margin-bottom: 40px;
 }
 
 .buttons {
@@ -179,6 +193,7 @@ table td {
   text-transform: uppercase;
   padding-left: 5px;
   padding-right: 5px;
+  cursor: pointer;
 }
 
 .action-watch {
@@ -192,15 +207,30 @@ table td {
   border: none;
 }
 
-/* * ------------------TABLET ver.------------------ */
+/* !  ------------------TABLET ver.------------------ */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-  .film-data {
-    width: 618px;
+  .modal-overlay {
+    height: 100vh;
+  }
+
+  .modal-content {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     flex-wrap: nowrap;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 60px;
+
+    position: absolute;
+    top: 270px;
+    left: calc((98% - 618px) / 2);
+    width: min-content;
+    /* background-color: rgba(0, 255, 255, 0.9); */
+    z-index: 1;
+  }
+
+  .modal-button {
+    top: 270px;
+    left: calc(((98% - 618px) / 2) + 618px);
   }
 
   .poster {
@@ -230,16 +260,32 @@ table td {
   }
 }
 
-/* * ------------------DESKTOP ver.------------------ */
+/* ! ------------------DESKTOP ver.------------------ */
 @media screen and (min-width: 1024px) {
-  .film-data {
-    width: 882px;
+  .modal-overlay {
+    height: 100vh;
+  }
+
+  .modal-content {
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
     flex-wrap: nowrap;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 60px;
+
+    position: absolute;
+    top: 260px;
+    left: calc((94% - 882px) / 2);
+    width: min-content;
+    /* background-color: rgba(0, 255, 255, 0.9); */
+    z-index: 1;
   }
+
+  .modal-button {
+    top: 260px;
+    left: calc(((94% - 882px) / 2) + 902px);
+  }
+
   .poster {
     width: 426px;
     height: 514px;
