--- a/src/components/trailer/trailer.css
+++ b/src/components/trailer/trailer.css
@@ -1,10 +1,14 @@
 /* ----------YuoTube Window------------- */
-.trailer-backdrop {
+.trailer-box {
+  display: none;
   position: fixed;
   top: 0;
   width: 100%;
   height: 100vw;
   background-color: transparent;
+}
+.trailer-box.is-open {
+  display: flex;
 }
 .trailer {
   width: 320px;
@@ -85,6 +89,7 @@
 
 .trailer-box-svg-on {
   position: absolute;
+  width: 100px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
