--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -37,7 +37,7 @@
         <svg class="trailer-svg">
             <use href="../images/symbol-defs.svg#icon-play3"></use>
         </svg>
-        <span class="btn-text">trailer</span>
+        <span class="btn-text">play trailer</span>
     </button>
 
     <div class="film-about">
