--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -1,3 +1,4 @@
+{{#each this}}
 <li class="photo-gallery-item">
     <img src="{{poster_path}}" alt="{{title}}" class="photo-gallery-photo" data-id="{{id}}">
 
@@ -8,5 +9,5 @@
         <span class="vote-average">{{vote_average}}</span>
         {{/if}}
     </p>
-
 </li>
+{{/each}}
