--- a/src/components/trailer/trailer.css
+++ b/src/components/trailer/trailer.css
@@ -2,7 +2,9 @@
 .trailer-box {
   display: none;
   position: fixed;
-  top: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100vw;
   background-color: transparent;
