commit localStorage, library

--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -32,7 +32,7 @@
 
 
     <div class="user-action-buttons">
-        <button class="buttons action-watch active" type="button">add to Watched</button>
+        <button class="buttons action-watch active watch-js" type="button"></button>
         <button class="buttons action-queue" type="button">add to queue</button>
     </div>
 
