--- a/src/templates/modal-window.hbs
+++ b/src/templates/modal-window.hbs
@@ -1,6 +1,6 @@
 <button type="button" class="modal-button" data-action="close-modal"></button>
 <div class="poster-box">
-    <img class="poster film-pic" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/{{backdrop_path}}" // ?
+    <img class="poster film-pic" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/{{poster_path}}"
         alt="a poster to {{title}} film">
     <div class="trailer-box-svg">
         <svg class="trailer-box-svg-on" data-id="{{id}}">
