--- a/src/components/trailer/trailer.css
+++ b/src/components/trailer/trailer.css
@@ -15,8 +15,6 @@
   display: flex;
 }
 .trailer {
-  width: 320px;
-  height: 160px;
   position: fixed;
   z-index: 6;
   top: 50%;
@@ -113,8 +111,8 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .trailer-iframe {
-    width: 320px;
-    height: 160px;
+    width: 310px;
+    height: 150px;
   }
   .btn-close-player {
     top: 4px;
@@ -128,6 +126,12 @@
 }
 
 @media screen and (min-width: 767px) and (max-width: 1199px) {
+  .trailer-box-svg {
+    width: 294px;
+    height: 416px;
+  }
+}
+@media screen and (min-width: 767px) {
   .trailer {
     width: 640px;
     height: 320px;
@@ -140,15 +144,11 @@
     top: 4px;
     right: 4px;
   }
-  .trailer-box-svg {
-    width: 294px;
-    height: 416px;
-  }
 }
 
 @media screen and (min-width: 1199px) {
-  .trailer {
-    width: 720px;
-    height: 360px;
+  .trailer-box-svg {
+    width: 426px;
+    height: 514px;
   }
 }
