--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,9 @@
 *::after {
   box-sizing: border-box;
 }
+a {
+  text-decoration: none;
+}
 
 @import "./components/header/header.css";
 @import "./components/modal-window/modal-window.css";
@@ -11,4 +14,3 @@
 @import "./components/trailer/trailer.css";
 @import "./components/pagination/pagination.css";
 @import "./components/footer/footer.css";
-
