--- a/src/templates/pagination.hbs
+++ b/src/templates/pagination.hbs
@@ -1,4 +1,4 @@
-{{!-- <div class="paginator">
+<div class="paginator">
   <button class="btn-page prev" data-index="1">&larr;</button>
   <button class="btn-first btn" data-index="1">1</button>
   <button class="btn-dots dots1" data-index="1">...</button>
@@ -10,4 +10,4 @@
   <button class="btn-dots dots2" data-index="1">...</button>
   <button class="btn-last btn" data-index="{{total_pages}}">{{total_pages}}</button>
   <button class="btn-page next" data-index="1">&rarr;</button>
-</div> --}}
+</div>
