--- a/src/templates/pagination.hbs
+++ b/src/templates/pagination.hbs
@@ -8,6 +8,6 @@
   <button class="btn-page4 btn" data-index="4">4</button>
   <button class="btn-page5 btn" data-index="5">5</button>
   <button class="btn-dots dots2" data-index="1">...</button>
-  <button class="btn-last btn" data-index="{{total_pages}}">{{total_pages}}</button>
+  <button class="btn-last btn" data-index="{{totalPages}}">{{totalPages}}</button>
   <button class="btn-page next" data-index="1">&rarr;</button>
 </div>
