--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -278,18 +278,17 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: 
-    linear-gradient(
-     to right,
-     rgba(0,0,0,.5),
-     rgba(0,0,0,.5)
-   );
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  );
   position: absolute;
   border-radius: 5px;
   cursor: pointer;
   overflow: show;
   user-select: none;
-  pointer-events:none;
+  pointer-events: none;
 }
 .film-overlay .button:first-child {
   margin-bottom: 15px;
